Moving code (#436)
* cc- adding db changes

* cc- moving code

* cc- moving code

* cc- updating the core actions

* cc- file controller update to get frontend working
* disabling websocket for now

* cc-

---------

Co-authored-by: eraphael <eraphael3@student.umgc.edu>